--- a/src/Menu.form
+++ b/src/Menu.form
@@ -1,13 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menu">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
+  <grid id="27dc6" binding="menu" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="50" vgap="50">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="187" y="20" width="907" height="570"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
-    <children/>
+    <properties>
+      <font name="Inconsolata SemiBold" size="16" style="1"/>
+      <minimumSize width="320" height="570"/>
+      <preferredSize width="600" height="400"/>
+    </properties>
+    <border type="etched" title="Conversor - Menu" title-justification="2" title-position="2">
+      <font name="DejaVu Sans Mono" size="24" style="1"/>
+    </border>
+    <children>
+      <component id="912cf" class="javax.swing.JButton" binding="button1" default-binding="true">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="DejaVu Sans Mono"/>
+          <text value="OK"/>
+        </properties>
+      </component>
+      <component id="9872c" class="javax.swing.JComboBox" binding="optionsBox">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="DejaVu Sans Mono" size="14" style="1"/>
+          <model>
+            <item value="Moeda"/>
+            <item value="Temperatura"/>
+          </model>
+        </properties>
+      </component>
+      <component id="ef16a" class="javax.swing.JLabel" binding="optionsLabel">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="2" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="DejaVu Sans Mono" size="16" style="1"/>
+          <text value="Escolha uma opção"/>
+        </properties>
+      </component>
+      <vspacer id="c122b">
+        <constraints>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="2" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+    </children>
   </grid>
 </form>
