--- a/src/Menu.form
+++ b/src/Menu.form
@@ -6,8 +6,10 @@
       <xy x="187" y="20" width="907" height="570"/>
     </constraints>
     <properties>
+      <background color="-8083771"/>
       <font name="Inconsolata SemiBold" size="16" style="1"/>
-      <minimumSize width="320" height="570"/>
+      <foreground color="-4473925"/>
+      <minimumSize width="600" height="400"/>
       <preferredSize width="600" height="400"/>
     </properties>
     <border type="etched" title="Conversor - Menu" title-justification="2" title-position="2">
@@ -40,6 +42,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="2" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-4473925"/>
           <font name="DejaVu Sans Mono" size="16" style="1"/>
           <text value="Escolha uma opção"/>
         </properties>
